unpackaged/main/default/objects/hed__Attribute__c/fields/Academic_Plan_Code__c.field-meta.xml
<CustomField>
    <fullName>Academic_Plan_Code__c</fullName>
    <label>Academic Plan Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>