unpackaged/main/default/objects/hed__Attribute__c/fields/Graduation_Date__c.field-meta.xml
<CustomField>
    <fullName>Graduation_Date__c</fullName>
    <description>Graduation date of student&#39;s attained credential.</description>
    <inlineHelpText>Graduation date of student&#39;s attained credential.</inlineHelpText>
    <label>Graduation Date</label>
    <type>Date</type>
</CustomField>