unpackaged/main/default/objects/hed__Attribute__c/fields/hed__Attribute_Type__c.field-meta.xml
<CustomField>
    <fullName>hed__Attribute_Type__c</fullName>
    <description>The kind of credential or student Attribute.</description>
    <inlineHelpText>The kind of credential or student Attribute.</inlineHelpText>
    <label>Attribute Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MDC Credential</fullName>
            </value>
            <value>
                <fullName>Applied for Scholarship</fullName>
            </value>
            <value>
                <fullName>Family Consideration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>