unpackaged/main/default/objects/hed__Attribute__c/fields/hed__Credential_Number__c.field-meta.xml
<CustomField>
    <fullName>hed__Credential_Number__c</fullName>
    <description>The certification number or license number of the Attribute&#39;s Credential.</description>
    <inlineHelpText>The certification number or license number of the Attribute&#39;s Credential.</inlineHelpText>
    <label>Credential Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>