unpackaged/main/default/objects/hed__Attribute__c/fields/hed__Field_Of_Study__c.field-meta.xml
<CustomField>
    <fullName>hed__Field_Of_Study__c</fullName>
    <description>The field of study for the Attribute&#39;s Credential.</description>
    <formula>TEXT(hed__Credential__r.hed__Field_Of_Study__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The field of study for the Attribute&#39;s Credential. Read only.</inlineHelpText>
    <label>Field of Study</label>
    <type>Text</type>
</CustomField>