unpackaged/main/default/objects/hed__Attribute__c/fields/Meets_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>Meets_Eligibility__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Meets Eligibility</label>
    <type>Checkbox</type>
</CustomField>