unpackaged/main/default/objects/hed__Attribute__c/fields/Preferred_Campus__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Campus__c</fullName>
    <label>Preferred Campus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hialeah</fullName>
            </value>
            <value>
                <fullName>Homestead</fullName>
            </value>
            <value>
                <fullName>Kendall</fullName>
            </value>
            <value>
                <fullName>Medical</fullName>
            </value>
            <value>
                <fullName>North</fullName>
            </value>
            <value>
                <fullName>Padron</fullName>
            </value>
            <value>
                <fullName>West</fullName>
            </value>
            <value>
                <fullName>Wolfson</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>