unpackaged/main/default/objects/hed__Attribute__c/fields/Term__c.field-meta.xml
<CustomField>
    <fullName>Term__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the term associated with the Student Characteristic</description>
    <inlineHelpText>Lookup to the term associated with the Student Characteristic</inlineHelpText>
    <label>Term</label>
    <referenceTo>hed__Term__c</referenceTo>
    <relationshipLabel>Attributes</relationshipLabel>
    <relationshipName>Attributes</relationshipName>
    <type>Lookup</type>
</CustomField>