unpackaged/main/default/objects/hed__Attribute__c/fields/Term_Awarded__c.field-meta.xml
<CustomField>
    <fullName>Term_Awarded__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Term Awarded</label>
    <referenceTo>hed__Term__c</referenceTo>
    <relationshipLabel>Attributes (Term Awarded)</relationshipLabel>
    <relationshipName>Attributes_Term_Awarded</relationshipName>
    <type>Lookup</type>
</CustomField>