unpackaged/main/default/objects/hed__Attribute__c/recordTypes/hed__Credential.recordType-meta.xml
<RecordType>
    <fullName>hed__Credential</fullName>
    <active>true</active>
    <description>Allows educational institutions to track licenses, certifications, or endorsements earned by staff or students.</description>
    <label>Credential</label>
</RecordType>