unpackaged/main/default/objects/hed__Attribute__c/recordTypes/Scholarship.recordType-meta.xml
<RecordType>
    <fullName>Scholarship</fullName>
    <active>true</active>
    <description>Allows tracking of when a student has applied to a scholarship.</description>
    <label>Scholarship</label>
</RecordType>